# flow-simulation-pinn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  train.py
examples/1D/: README.md  train_with_tuning.py
examples/1D/configs/criterion/: default.yaml  strong.yaml
examples/1D/configs/model/: default.yaml
examples/1D/configs/scheduler/: default.yaml
examples/1D/configs/trainer/: default.yaml  strong.yaml
examples/1D/data/: flow_sim.py  plots.py  sample.py
examples/1D/data/test/: data.npy
examples/1D/data/train/: data.npy
examples/1D/datasets/: __init__.py
examples/1D/losses/: __init__.py  weak_conservation.py
examples/one_dim/: README.md  train.py
examples/one_dim/configs/: config.yaml
examples/one_dim/configs/criterion/: default.yaml  strong.yaml
examples/one_dim/configs/dataset/: default.yaml
examples/one_dim/data/: sample.py
examples/one_dim/data/test/: data.npy
pinns/data/datasets/: __init__.py  common.py  mesh.py  quadratures.py
pinns/data/domains/: base.py  one_dim.py  two_dim.py
pinns/data/quadratures/: __init__.py  base.py  spatial.py  time.py
pinns/logger/: logger.py
pinns/loss_balancer/: __init__.py  loss_balancer.py
pinns/losses/one_dim/: __init__.py  darcy.py  data.py  strong_conservation.py  weak_conservation.py
pinns/models/: __init__.py  vanilla.py
pinns/trainers/: __init__.py  base.py  data.py  strong.py
pinns/utils/: __init__.py  init_utils.py
src/configs/: train.yaml
src/configs/criterion/: burgers_pinn.yaml
src/configs/dataset/: burgers.yaml
src/configs/model/: pinn_mlp.yaml
src/configs/writer/: cometml.yaml
src/dataset/: pinn_base.py  utils.py
src/dataset/burgers/: __init__.py  dataset.py
src/logger/: __init__.py  base.py  cometml.py
src/loss/: base.py
src/loss/burgers/: pinn.py
src/metrics/: base.py  tracker.py
src/model/pinn/: mlp.py
src/utils/: jax.py
tests/: test_1d_weak_conservation_law.py
(+1 files in other folders)
