[tool.poetry]
name = "flow-simulation-pinn"
version = "0.1.0"
description = ""
authors = ["Timur Lidzhiev <trlidzhiev@gmail.com>"]
readme = "README.md"
packages = [{ include = "pinns" }]

[tool.poetry.dependencies]
python = ">=3.10.12"
ruff = "0.8.2"
numba = "0.60.0"
numpy = "2.0.0"
torch = "2.5.1"
scipy = "1.14.1"
matplotlib = "3.10.0"
hydra-core = "1.3.2"
wandb = "0.19.1"
tqdm = "4.67.1"
optuna = "4.1.0"
ipykernel = "6.29.5"
plotly = "5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
torchviz = "0.0.2"

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
