[project]
name = "flow-simulation-pinn"
version = "0.1.0"
description = "Two-phase flow simulation in porous media using Physics-Informed Neural Networks"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.0",
    "ty==0.0.14",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
